add images to books

--- a/books.html
+++ b/books.html
@@ -28,17 +28,39 @@
             <div id="books-section">
                 <h3>Read and recommended</h3>
                 <ul id="read-recommended-list">
-                    <li class="reference-item"><a href="https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882" target="_blank">Clean Code</a></li>
-                    <li class="reference-item"><a href="https://www.manning.com/books/learn-docker-in-a-month-of-lunches" target="_blank">Learn Docker in a month of lunches</a></li>
-                    <li class="reference-item"><a href="https://git-scm.com/docs/user-manual" target="_blank">Official Git User Manual</a></li>
-                    <li class="reference-item"><a href="https://linuxcommand.org/tlcl.php" target="_blank">The Linux Command Line</a></li>
-                    <li class="reference-item"><a href="https://www.amazon.com/Head-First-Java-Brain-Friendly-Guide/dp/1491910771" target="_blank">Head first Java</a></li>
-                    <li class="reference-item"><a href="https://www.amazon.com/Head-First-Design-Patterns-Object-Oriented/dp/149207800X" target="_blank">Head first Design Patterns</a></li>
-                    <li class="reference-item"><a href="https://www.amazon.com/Functional-Programming-Java-Harnessing-Expressions/dp/1937785467" target="_blank">Functional Programming in Java</a></li>
+                    <li class="reference-item">
+                        <img src="images/clean-code.jpg" alt="Clean Code" class="book-icon">
+                        <a href="https://www.amazon.com/Clean-Code-Handbook-Software-Craftsmanship/dp/0132350882" target="_blank">Clean Code</a>
+                    </li>
+                    <li class="reference-item">
+                        <img src="images/docker.jpg" alt="Learn Docker in a Month of Lunches" class="book-icon">
+                        <a href="https://www.manning.com/books/learn-docker-in-a-month-of-lunches" target="_blank">Learn Docker in a month of lunches</a>
+                    </li>
+                    <li class="reference-item">
+                        <img src="images/git.jpg" alt="git" class="book-icon">
+                        <a href="https://git-scm.com/docs/user-manual" target="_blank">Official Git User Manual</a>
+                    </li>
+                    <li class="reference-item">
+                        <img src="images/command-line.jpg" alt="command-line" class="book-icon">
+                        <a href="https://linuxcommand.org/tlcl.php" target="_blank">The Linux Command Line</a>
+                    </li>
+                    <li class="reference-item">
+                        <img src="images/head-first-java.jpg" alt="head-first-java" class="book-icon">
+                        <a href="https://www.amazon.com/Head-First-Java-Brain-Friendly-Guide/dp/1491910771" target="_blank">Head first Java</a>
+                    </li>
+                    <li class="reference-item">
+                        <img src="images/head-first-design-patterns.jpg" alt="head-first-design-patterns" class="book-icon">
+                        <a href="https://www.amazon.com/Head-First-Design-Patterns-Object-Oriented/dp/149207800X" target="_blank">Head first Design Patterns</a>
+                    </li>
+                    <li class="reference-item">
+                        <img src="images/functional-programming-in-java.jpg" alt="functional-programming-in-java" class="book-icon">
+                        <a href="https://www.amazon.com/Functional-Programming-Java-Harnessing-Expressions/dp/1937785467" target="_blank">Functional Programming in Java</a>
+                    </li>
                     <li class="reference-item">More to be updated...</li>
                 </ul>
                 <h3>Next in line</h3>
                 <ul id="next-in-line-list">
+                    <img src="images/accelerate.jpg" alt="accelarate" class="book-icon">
                     <li class="reference-item"><a href="https://www.amazon.com/Accelerate-Building-Performing-Technology-Organizations/dp/B07BMBYHXL" target="_blank">Accelerate</a></li>
                 </ul>
             </div>  
