--- a/blogs.html
+++ b/blogs.html
@@ -26,8 +26,8 @@
         <section>
             <input type="text" id="search-bar" placeholder="Search blog posts..." onkeyup="filterBlogs()">
             <ul id="blog-list">
-                <li class="blog-item"><a href="blogs/blog1.html">e2e tests location (in or outside app repo?) : The decision that can make or break your automation efforts.</a></li>
-                <li class="blog-item"><a href="blogs/blog2.html">Dummy article: How to Write Effective Test Cases</a></li>
+                <li class="blog-item"><a href="blogs/blog1.html">Test Location: The single most imp factor that can make or break your test automation efforts</a></li>
+                <li class="blog-item"><a href="blogs/blog2.html">Yes, you can finish ALL your tests in 2 to 5 mins. Here is how.</a></li>
                 <li class="blog-item"><a href="blogs/blog3.html">Dummy article:Understanding End-to-End Testing</a></li>
             </ul>
             <div id="pagination">
