--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Importance of Automated Testing</title>
+    <title>Test Location: The single most imp factor that can make or break your test automation efforts</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
