--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to Write Effective Test Cases</title>
+    <title>Yes, you can finish ALL your tests in 2 to 5 mins!</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -23,6 +23,10 @@
         </nav>
     </header>
     <main>
+        <h2>Yes, you can finish ALL your tests in 2 to 5 mins!</h2>
+        <iframe title="Diagram" style="width:100%;height:1053px;"
+            src="https://app.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1#HPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Ffinish-tests-in-x-mins.drawio">
+        </iframe>
         <article>
             <p>Writing effective test cases is key to successful testing. A good test case should be clear, concise, and
                 easy to understand. It should include detailed steps, expected results, and cover both positive and
