--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yes, you can finish ALL your tests in 2 to 5 mins!</title>
+    <title>Playwright Tests: Yes, you can finish ALL your playwright tests in 2 to 5 mins!</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -23,15 +23,87 @@
         </nav>
     </header>
     <main>
-        <h2>Yes, you can finish ALL your tests in 2 to 5 mins!</h2>
-        <iframe title="Diagram" style="width:100%;height:1053px;"
-            src="https://app.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1#HPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Ffinish-tests-in-x-mins.drawio">
-        </iframe>
+        <h2>Playwright Tests: Yes, you can finish ALL your playwright tests in 2 to 5 mins!</h2>
         <article>
-            <p>Writing effective test cases is key to successful testing. A good test case should be clear, concise, and
-                easy to understand. It should include detailed steps, expected results, and cover both positive and
-                negative scenarios. Always prioritize critical functionalities and use templates to maintain consistency
-                across your test suite.</p>
+            <h3>Context</h3>
+            <p>Tools like playwright provide options to distribute tests on multiple machines via sharding. This is typically achieved by: 
+                <ol>
+                    <li>Hardcoding a high number of runners (shards) to finish all tests faster using a matrix strategy</li>
+                    <li>And sharding evenly distirbuting tests on each runner</li>
+                </ol>
+            </p>
+            <h3>Problem Statement</h3>
+            <p>Even though this seems like a good approach on paper, there are two major issues with this approach:</p>
+            <ol>
+                <li>When there are micro PRs with test fixes which just adds one or few tests, it would spin up all the runners (shards). So runners count is not dynamic or test load aware. </li>
+                <img src="../images/too-many-runners.png" alt="too-many-runners" class="blog-icon" style="width: 40%;">
+
+                <li>Even though tests are evenly distributed in terms of numbers, not all tests take equal time. 
+                    And since playwright sharding has no clue how much time each test takes, it may end up clubbing long running tests together thus 
+                    taking a overall high test run time, even when there are high number of runners added. 
+                    This will be extremelly inefficient since some runners will be underutilised and some will be long running. Eventually your test run time is the one that your slowest runner takes.
+                </li>
+                <img src="../images/uneven-test-run.png" alt="uneven-test-run" class="blog-icon" style="width: 60%;"> 
+            <h3>Desired Solution</h3>
+            <p>A desired solution would involve creating a dynamic test sharding mechanism that is aware of how much time each test takes and depending on the load of tests and 
+                desired total execution time, creates required runners at the run time. 
+                That means, if we only touch a few tests and want to finish them in 1 or 2 mins, then we only need to spin up runners that 
+                can finish all tests in 1 or 2 mins (say one or two).
+                <br>
+                <img src="../images/less-runnes-for-less-load.png" alt="less-runnes-for-less-load" class="blog-icon" style="width: 35%;">
+                <br>
+                And if we have a lot of tests to run, then again based on the desired total execution time, if we can spin up runners 
+                accordingly and distribute the test load evenly, so that there are no bottlenecks, that would be desirable. 
+                <img src="../images/dynamic-runners-for-dynamic-load.png" alt="dynamic-runners-for-dynamic-load" class="blog-icon" style="width: 45%;">
+            </p>
+            <h3>Actual Solution Design</h3>
+            <p>Below is a diagram that explains how we can achieve this dynamic test sharding mechanism:
+                The key components of this design are:
+                <ol>
+                    <li>state.json: 
+                        <ol>
+                            <li>This file should contain a map of each test case and the time it took to run on the local machine. </li>
+                            <li>The updated tests should run automatically when a developer tries to commit these tests (using pre-commit hooks). </li>
+                            <li>File should be automatially created after each test run (using a custom runner) that runs automatically after each run.</li>
+                            <li>And by committing this file automatically (using a post-commit hook).</li>
+                        </ol> 
+                    </li>
+                    <li>A GitHub action: 
+                        <h4>Inputs:</h4>
+                        <ol>
+                            <li> A custom github action that takes users wishes to finish test in (x mins). </li>
+                            <li>Takes the command to run </li>
+                            <li>Considers the cores of the runner machine to decide workers </li>
+                            <li>Considers the cores of the runner machine to decide workers </li>
+                        </ol>
+                        <h4>References:</h4>
+                        <ol>
+                            <li>Considers the state.json to undrestand time each test takes to finish</li>
+                            <li>Considers the cores of the runner machine to decide the workers that can be safely used for parallel run</li>
+                        </ol>
+                        <h4>Outputs:</h4>
+                        <ol>
+                            <li> A dynamic matrix strategy that gives runner count to run tests. ex: ["1","2", "3"] </li>
+                            <li> A test load distribution json document that gives a mapping of tests and their respectie projects to run under each runner </li>
+                            <li> The number of workers to use for parallel execution, based on cores of runners to use</li>
+                        </ol>
+                    </li>
+                    <li>Caller workflow: 
+                        <ol>
+                            <li> This workflow will use the above variables to run tests efficiently on different runners </li>
+                            <li> Create and publish a consolidated html report </li>
+                        </ol>
+                    </li>
+            </p>
+            <iframe title="Diagram Viewer" style="width:100%;height:1053px;"
+                src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=finish-tests-in-x-mins.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Ffinish-tests-in-x-mins.drawio">
+            </iframe>
+            <h3>Reference</h3>
+            <p>
+                Reference spreadseheet: 
+                <a href="https://docs.google.com/spreadsheets/d/18MjzNY7tWU-RtO3osJ9ebYEAR6kHJ7mXUXVFBcFEMAs/edit?usp=sharing"
+                    target="_blank">Spreadsheet</a> 
+            </p>
         </article>
     </main>
     <footer>
