--- a/blogs.html
+++ b/blogs.html
@@ -27,7 +27,7 @@
             <input type="text" id="search-bar" placeholder="Search blog posts..." onkeyup="filterBlogs()">
             <ul id="blog-list">
                 <li class="blog-item"><a href="blogs/blog1.html">Test Location: The single most imp factor that can make or break your test automation efforts</a></li>
-                <li class="blog-item"><a href="blogs/blog2.html">Yes, you can finish ALL your tests in 2 to 5 mins. Here is how.</a></li>
+                <li class="blog-item"><a href="blogs/blog2.html">Yes, you can finish ALL your PlayWright tests in 2 to 5 mins. Here is how.</a></li>
                 <li class="blog-item"><a href="blogs/blog3.html">Dummy article:Understanding End-to-End Testing</a></li>
             </ul>
             <div id="pagination">
