--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -27,27 +27,29 @@
         <img src="../images/3k-tests-in-90-seconds.png" alt="3k-tests-in-90-seconds" class="blog-icon" style="width: 55%;">
 
         <article>
-            <h3>Context</h3>
-            <p>Tools like playwright provide options to distribute tests on multiple machines via sharding. This is typically achieved by: 
-                <ol>
-                    <li>Hardcoding a high number of runners (shards) to finish all tests faster using a matrix strategy</li>
-                    <li>And sharding evenly distirbuting tests on each runner</li>
-                </ol>
-            </p>
             <h3>Problem Statement</h3>
-            <p>Even though this seems like a good approach on paper, there are two major issues with this approach:</p>
+            <p>Playwright provides a option to distribute tests on multiple machines with its
+                <a href="https://playwright.dev/docs/test-sharding" target="_blank">Test Sharding option.</a>
+                However there are two main problems with it:
             <ol>
-                <li>Even though playwright sharding evenly distributes tests, in terms of numbers, not all tests take equal time. 
+                <h4>Sharding is not aware of how much time each test takes.</h4>
+                <li>Even though playwright sharding evenly distributes tests, as explained here in the article about 
+                     <a href="" https://playwright.dev/docs/test-sharding#balancing-shards" target="_blank">Balancing Shards</a>, in terms of execution time, not all tests take equal time. 
                     And since playwright sharding has no clue how much time each test takes, it will often end up creating uneven test run distribution on different runners in terms of execution time. 
                     This means, there will be some runners that will finish early and some that will finish late.
                      Eventually your total test run time will be bottlenecked due to the slowest running runner.
                 </li>
                 <img src="../images/uneven-test-run.png" alt="uneven-test-run" class="blog-icon" style="width: 50%;"> 
-                <li>At other times, if you use a reusable workflow, then when there are micro PRs with just a few tests touched in them, 
-                    your reusable workflow would still spin up all the runners (shards). So essentially you would be wasting runner minutes
-                and increasing cost for your company for no apparent good reason. </li>
+                <h4>No examples of dynamic scaling of runners</h4>
+                <li>Playwright provides a 
+                    <a href="" https://playwright.dev/docs/test-sharding#github-actions-example" target="_blank">Github Actions Example</a>
+                    to show how to define runners for sharding. However, since often the same reusable workflow is used to run all tests, 
+                    and test fixes, there are times, when the number of tests touched are very few, but the reusable workflow will still spin up all the runners.
+                    This results into a lot of wasted resources and money.
+                </li>
                 <img src="../images/too-many-runners.png" alt="too-many-runners" class="blog-icon" style="width: 50%;">
-
+            </ol>
+            </p>
             <h3>Desired Solution</h3>
             <p>A desired solution would involve creating a dynamic test sharding mechanism that is aware of how much time each test takes and depending on the load of tests and 
                 desired total execution time, creates required runners at the run time. 
