--- a/articles.html
+++ b/articles.html
@@ -14,6 +14,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="youtube.html">YouTube</a>
+            <a href="github.html">GitHub</a>
             <a href="community.html">4TestCommunity</a>
             <a href="contact.html">Contact</a>
             <a href="talks.html">Talks</a>
