--- a/github.html
+++ b/github.html
@@ -25,6 +25,9 @@
     </header>
     <main>
         <section>
+            <iframe src="https://github.com/sponsors/PramodKumarYadav/card" title="Sponsor PramodKumarYadav" height="225"
+                width="600" style="border: 0;">
+            </iframe>
             <h2>RunWright: A GitHub action that allows you to finish your tests in x mins (that you decide)</h2>
             <h4>NOTE: This is the latest and recommended action for running playwright tests in CI</h4>
             <p>
@@ -51,6 +54,23 @@
             <a href="https://github.com/marketplace/actions/playwright-load-balancer-based-on-tests-to-run"
                 target="_blank">Checkout playwright-load-balancer-based-on-tests-to-run on GitHub marketplace
                 now!</a>
+        </p>
+        <h2> Like my work and want to support or sponsor?</h2>
+        <p>
+        <div>
+            <!-- Buy Me a Coffee Button -->
+            <a href="https://buymeacoffee.com/power.tester" target="_blank">
+                <img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me a Coffee"
+                    style="height: 60px; width: 217px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); margin-bottom: 15px;">
+            </a>
+            <br>
+            <!-- GitHub Sponsor Button -->
+            <a href="https://github.com/sponsors/PramodKumarYadav" target="_blank">
+                <img src="https://img.shields.io/badge/Sponsor%20Me%20on%20GitHub-%E2%9D%A4-6f42c1?style=for-the-badge&logo=github-sponsors"
+                    alt="Sponsor Me on GitHub"
+                    style="height: 60px; width: 217px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);">
+            </a>
+        </div>
         </p>
         </section>
     </main>
