--- a/blogs/test-run-goals.html
+++ b/blogs/test-run-goals.html
@@ -25,14 +25,16 @@
     </header>
     <main>
         <article>
-            <p>End-to-end testing ensures that your application works as intended from start to finish. It involves
-                testing the entire workflow, including integrations with external systems. This type of testing
-                simulates real user scenarios, helping to identify issues that might be missed in unit or integration
-                tests.</p>
+            <h2>Test Run: Goals and Objectives!</h2>
+
+            <iframe title="Test Run Goals and Objectives" style="width:100%;height:873px;"
+                src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test-run-goals-and-objectives.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fgoals%2Ftest-run-goals-and-objectives.drawio">
+            </iframe>
         </article>
     </main>
     <footer>
-        <p>&copy; 2024 My Website</p>
+    <footer>
+        <p>&copy; 2025 Power Tester</p>
     </footer>
 </body>
 
