--- a/blogs/finish-fast-in-2-mins.html
+++ b/blogs/finish-fast-in-2-mins.html
@@ -142,7 +142,7 @@
         </article>
     </main>
     <footer>
-        <p>&copy; 2024 My Website</p>
+        <p>&copy; 2025 Power Tester</p>
     </footer>
 </body>
 
