--- a/blogs.html
+++ b/blogs.html
@@ -45,6 +45,12 @@
                         src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test-run-goals-and-objectives.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fgoals%2Ftest-run-goals-and-objectives.drawio">
                     </iframe>
                 </li>
+                <li class="blog-item">
+                    <a href="blogs/ci-cd.html">CI CD with a focus on test and quality gates</a>
+                    <iframe title="CI CD with a focus on test and quality gates" style="width:100%;height:1783px;" 
+                        src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=ci-cd.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Fci-cd.drawio">
+                    </iframe>
+                </li>
             </ul>
             <div id="pagination">
                 <button onclick="changePage(-1)">Previous</button>
