--- a/community.html
+++ b/community.html
@@ -49,6 +49,9 @@
                     <li>If you need my services for business opportunities (hiring me), book a slot from the business calendar on Home Page or Contact page.</li>
                 </ul>
             </div>
+            <div class="note">
+                🚫 Below facility to book an appointment is temporarily unavailable because I have started with a new job and no longer have these free time slots to offer.
+            </div>
             <!-- Google Calendar Appointment Scheduling begin -->
             <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
             <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
@@ -66,11 +69,6 @@
                 })();
             </script>
             <!-- end Google Calendar Appointment Scheduling -->
-            <!-- Google Calendar Appointment Scheduling begin -->
-            <iframe
-                src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ0Iw8FGV5lcAIBKpGynvnoqMs8YT75BnQasy3U5qZxhEBCd1mJSzYFpLORYwIZyaL8JMBRmvgNV?gv=true"
-                style="border: 0" width="100%" height="600" title="Google Calendar Appointment Scheduling"></iframe>
-            <!-- end Google Calendar Appointment Scheduling -->      
             
         </section>    
     </main>
