--- a/blogs/ci-cd.html
+++ b/blogs/ci-cd.html
@@ -25,9 +25,9 @@
     </header>
     <main>
         <article>
-            <h2>CI-CD: With a focus on test and quality gates!</h2>
-            <iframe title="CI CD with a focus on test and quality gates" style="width:100%;height:1783px;" 
-                src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=ci-cd.drawio#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Fci-cd.drawio">
+            <h2>Continuous testing in a CICD setup without feature flags!</h2>
+            <iframe title="Continuous testing in a CICD setup without feature flags" style="width:100%;height:1783px;" 
+                src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=ci-cd-without-feature-toggles.drawio&dark=auto#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Fci-cd-without-feature-toggles.drawio">
             </iframe>
         </article>
     </main>
