--- a/blogs.html
+++ b/blogs.html
@@ -46,7 +46,7 @@
                     </iframe>
                 </li>
                 <li class="blog-item">
-                    <a href="blogs/ci-cd.html">Continuous testing in a CICD setup without feature flags</a>
+                    <a href="blogs/ci-cd-without-feature-toggles.html">Continuous testing in a CICD setup without feature flags</a>
                     <iframe title="Continuous testing in a CICD setup without feature flags" style="width:100%;height:1783px;" 
                         src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=ci-cd-without-feature-toggles.drawio&dark=auto#Uhttps%3A%2F%2Fraw.githubusercontent.com%2FPramodKumarYadav%2Ftest-art%2Fmain%2Fcicd%2Fci-cd-without-feature-toggles.drawio">
                     </iframe>
