--- a/blogs/ci-cd-with-feature-toggles.html
+++ b/blogs/ci-cd-with-feature-toggles.html
@@ -68,15 +68,15 @@
                 <h3>Potential benefits of decoupled release and deployments!</h3>
                 <ol>
                     <li>Simple and risk free Trunk Based Development.</li>
-                    <li>Potential to deploy to production multiple times a day without accidentally releasing half-baked features to customers.</li>
-                    <li>Potential to release on demand, when ready.</li>
-                    <li>Potential to soft rollback (by hiding the faulty functionality from customer) on click of a button.</li>
-                    <li>No need to do hotfixes. Faults can be fixed carefully, without under pressure, and same as any other feature or bugfix.</li>
+                    <li>Possibility to deploy to production multiple times a day without accidentally releasing half-baked features to customers.</li>
+                    <li>Release on demand, when ready.</li>
+                    <li>Possibility to do soft rollbacks (by hiding the faulty functionality from customers) on click of a button.</li>
+                    <li>No need to do hotfixes. Faults can be fixed carefully on latest main, without under pressure, and same as any other feature or bugfix.</li>
                     <li>Simplified release process.</li>
                     <li>Simplified and standardized deployment process for any and all kind of changes.</li>
-                    <li>Potential to do A/B testing and canary releases in production.</li>
+                    <li>Possibility to do A/B testing and canary releases in production.</li>
                     <li>No need for multiple test environments (dev, test, staging).</li>
-                    <li>Potentially one Test environment with targetting rules set in LaunchDarkly should be sufficient to cover all scenarios.</li>
+                    <li>One Test environment with targeting rules set in LaunchDarkly should be sufficient to cover all scenarios.</li>
                 </ol>
             </p>
         </article>
